# EnergyAwareMCPP

./: .gitignore  CMakeLists.txt
include/mstsp_solver/: SolverConfig.h  TargetSet.h
sample_configs/cape/: config.yaml
sample_configs/complex/: config.yaml
sample_configs/island/: config.yaml
sample_configs/rectangle/: config.yaml
sample_configs/simple/: config.yaml
scripts/: visualize_paths.py
src/: MapPolygon.cpp  ShortestPathCalculator.cpp  algorithms.cpp  main.cpp
src/mstsp_solver/: MstspSolver.cpp
